objects/Quote_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Solutions</relationshipLabel>
        <relationshipName>Quote_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>Quote_Solutions__c</referenceTo>
        <relationshipLabel>Quote Solutions (Coned From)</relationshipLabel>
        <relationshipName>Quote_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Child__c</fullName>
        <formula>NOT(ISBLANK(Parent_Solution__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Order__c</fullName>
        <formula>IF( ISBLANK(Parent_Solution__c), Order__c, Parent_Solution__r.Order__c + (Order__c/100) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Solution_Name__c</fullName>
        <formula>Parent_Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Solution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Solution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote_Solutions__c.Quote__c</field>
                <operation>equals</operation>
                <valueField>$Source.Quote__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Solutions__c</referenceTo>
        <relationshipLabel>Quote Solutions</relationshipLabel>
        <relationshipName>Quote_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <formula>TEXT(Quote__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Solutions</relationshipLabel>
        <relationshipName>Quote_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <description>Siebel ID</description>
        <label>Siebel ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <formula>Total_List_Price__c - Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Extended_List_Price_Parent__c</fullName>
        <label>Total Extended List Price (Parent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_List_Price__c</fullName>
        <label>Total Extended List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_Net_Price_Parent__c</fullName>
        <label>Total Extended Net Price (Parent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Extended_Net_Price__c</fullName>
        <label>Total Extended Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price_Parent__c</fullName>
        <label>Total List Price (Parent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Parent__c</fullName>
        <label>Total Price (Parent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Solution</label>
    <nameField>
        <label>Quote Solutions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>